--- a/css/styles.css
+++ b/css/styles.css
@@ -61,12 +61,12 @@ button {
 }
 
 #btn__reset,
-#btn__new-game {
+#btn__new-phrase {
 	width: 200px;
 	margin: 0 auto;
 }
 
-#btn__new-game {
+#btn__new-phrase {
   display: none;
 }
 
@@ -143,7 +143,7 @@ button {
 }
 
 .wrong {
-  background: #f7a964;
+  background: #ff4500;
   color: #FFFFFF;
 }
 
