--- a/css/styles.css
+++ b/css/styles.css
@@ -123,10 +123,21 @@ button {
   padding: 20px 1px 0 1px;
   margin-right: 2px;
   border-radius: 5px;
-  -webkit-animation-duration: .5s;
-  animation-duration: .5s;
+  -webkit-animation-name: show-letter;
+  -webkit-animation-duration: 1s;
+  animation-name: show-letter;
+  animation-duration: 1s;
 }
 
+@-webkit-keyframes show-letter {
+  from {background-color: #D2D2D4;}
+  to {background-color: #4ac0d6;}
+}
+
+@keyframes show-letter {
+  from {background-color: #D2D2D4;}
+  to {background-color: #4ac0d6;}
+}
 
 /* Keyboard */
 
@@ -136,7 +147,7 @@ button {
 }
 
 .chosen {
-  background: #3a3f58;
+  background: #32cd32;
   border-radius: 5px;
   font-size: var(--font-size-medium);
   color: #FFFFFF;
@@ -145,6 +156,10 @@ button {
 .wrong {
   background: #ff4500;
   color: #FFFFFF;
+}
+
+.key:hover {
+  transform: scale(1.25, 1.25);
 }
 
 .btn__reset {
@@ -201,7 +216,7 @@ button {
 }
 
 .lose {
-  background-color: #f5785f;
+  background-color: var(--color-lose);
 }
 
 .lose a {
