--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,11 @@ li, ol, ul {
   display: inline-block;
 }
 
+h3 {
+  text-transform: uppercase;
+  font-size: var(--font-size-medium);
+}
+
 h2 {
   margin: 0;
   text-transform: uppercase;
@@ -107,6 +112,7 @@ button {
   width: 65px;
   padding: 20px 1px 0 1px;
   margin-right: 2px;
+  margin-top: 7px;
   color: transparent;
   background: var(--color-neutral-light);
   border-radius: 5px;
